--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "multiselect-react-dropdown": "^2.0.25",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-otp-input": "^3.1.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
